Setup concurrently + nodemon

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "e-Commerce web platform",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "yarn --cwd frontend start",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/nrednav/kaizen/issues"
   },
-  "homepage": "https://github.com/nrednav/kaizen#readme"
+  "homepage": "https://github.com/nrednav/kaizen#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
+  }
 }
