--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "remixicon": "^2.5.0"
+    "remixicon": "^2.5.0",
+    "smoothscroll-for-websites": "^1.4.10",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "prestart": "yarn run build:tailwind",
