--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "prestart": "yarn run build:tailwind",
-    "prebuild": "yarn run build:tailwind",
+    "prestart": "npm run build:tailwind",
+    "prebuild": "npm run build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
